# starchart

./: .clippy.toml  .codespellrc  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .tarpaulin.toml  Cargo.toml  README.md  build.rs  cobertura.xml  crates.js  expanded.rs  index.html  netlify.sh  netlify.toml  search-index.js  settings.html  source-files.js  tarpaulin-report.html
.github/: .codecov.yml  CODEOWNERS  labeler.yml
atomics/: Cargo.toml  build.rs
dashmap/: all.html  index.html  struct.DashMap.html  struct.DashSet.html  struct.ReadOnlyView.html  trait.Map.html
examples/: basic.rs  get_all.rs
starchart/: Cargo.toml  README.md  all.html  derive.IndexEntry.html  derive.Key.html  enum.Error.html  index.html  sidebar-items.js  struct.Action.html  struct.Database.html  struct.Error.html  struct.Gateway.html  struct.Starchart.html  trait.Entry.html  trait.IndexEntry.html  trait.Key.html  trait.Settings.html  type.ChartResult.html  type.Gateway.html  type.Result.html
starchart-backends/: Cargo.toml  LICENSE  README.md  build.rs
starchart-backends/src/: lib.rs  memory.rs  testing.rs
starchart-backends/src/fs/: binary.rs  cbor.rs  error.rs  json.rs  mod.rs  toml.rs  util.rs  yaml.rs
starchart-backends/src/fs/util/: file.rs  mod.rs  testing.rs
starchart-derive/: Cargo.toml
starchart-derive/src/: lib.rs
starchart/action/: enum.ActionKind.html  enum.ActionResult.html  enum.ActionValidationError.html  enum.OperationTarget.html  enum.TargetKind.html  index.html  sidebar-items.js  struct.Action.html  struct.ActionRunError.html  struct.CreateOperation.html  struct.DeleteOperation.html  struct.DynamicAction.html  struct.EntryTarget.html  struct.ReadOperation.html  struct.TableTarget.html  struct.UpdateOperation.html  trait.ActionRunner.html  trait.CrudOperation.html  trait.OpTarget.html  trait.OperationTarget.html  type.CreateEntryAction.html  type.CreateTableAction.html  type.DeleteEntryAction.html  type.DeleteTableAction.html  type.ReadEntryAction.html  type.ReadTableAction.html  type.UpdateEntryAction.html  type.UpdateTableAction.html
starchart/action/dynamic/: struct.DynamicAction.html
starchart/action/error/: enum.ActionError.html  enum.ActionErrorType.html  enum.ActionRunError.html  enum.ActionRunErrorType.html  enum.ActionValidationError.html  enum.ActionValidationErrorType.html  struct.ActionError.html  struct.ActionRunError.html  struct.ActionValidationError.html
starchart/action/impl/: struct.CreateOperation.html  struct.DeleteOperation.html  struct.EntryTarget.html  struct.ReadOperation.html  struct.TableTarget.html  struct.UpdateOperation.html  trait.ActionRunner.html  trait.CrudOperation.html  trait.OpTarget.html  trait.OperationTarget.html
starchart/action/kind/: enum.ActionKind.html
starchart/action/result/: enum.ActionResult.html
starchart/atomics/: enum.GuardKind.html  index.html  sidebar-items.js  struct.AtomicGuard.html  struct.ExclusiveGuard.html  struct.SharedGuard.html
starchart/backend/: index.html  sidebar-items.js  struct.BincodeBackend.html  struct.CacheBackend.html  struct.JsonBackend.html  struct.JsonPrettyBackend.html  struct.MemoryBackend.html  struct.RonBackend.html  struct.RonPrettyBackend.html  struct.TomlBackend.html  struct.TomlPrettyBackend.html  struct.YamlBackend.html  trait.Backend.html
starchart/backend/bincode/: struct.BincodeBackend.html
starchart/backend/cache/: enum.CacheError.html  struct.CacheBackend.html
starchart/backend/fs/: enum.FsError.html  enum.FsErrorType.html  index.html  sidebar-items.js  struct.FsError.html  trait.FsBackend.html
starchart/backend/future/: index.html  sidebar-items.js  type.CreateFuture.html  type.CreateTableFuture.html  type.DeleteFuture.html  type.DeleteTableFuture.html  type.EnsureFuture.html  type.EnsureTableFuture.html  type.GetAllFuture.html  type.GetFuture.html  type.GetKeysFuture.html  type.HasFuture.html  type.HasTableFuture.html  type.InitFuture.html  type.ReplaceFuture.html  type.ShutdownFuture.html  type.UpdateFuture.html
starchart/backend/futures/: index.html  sidebar-items.js  type.CreateFuture.html  type.CreateTableFuture.html  type.DeleteFuture.html  type.DeleteTableFuture.html  type.EnsureFuture.html  type.EnsureTableFuture.html  type.GetAllFuture.html  type.GetFuture.html  type.GetKeysFuture.html  type.HasFuture.html  type.HasTableFuture.html  type.InitFuture.html  type.ReplaceFuture.html  type.ShutdownFuture.html  type.UpdateFuture.html
starchart/backend/json/: enum.JsonError.html  struct.JsonBackend.html  struct.JsonPrettyBackend.html  type.JsonError.html
starchart/backend/memory/: enum.MemoryError.html  enum.MemoryErrorType.html  struct.MemoryBackend.html  struct.MemoryError.html
starchart/backend/ron/: struct.RonBackend.html  struct.RonPrettyBackend.html
starchart/backend/toml/: struct.TomlBackend.html  struct.TomlPrettyBackend.html
starchart/backend/yaml/: struct.YamlBackend.html
starchart/database/: enum.DatabaseError.html  struct.Database.html
starchart/entry/: trait.Entry.html  trait.IndexEntry.html  trait.Key.html  trait.Settings.html
starchart/error/: enum.ActionError.html  enum.ActionErrorType.html  enum.ActionRunError.html  enum.ActionRunErrorType.html  enum.ActionValidationError.html  enum.ActionValidationErrorType.html  enum.CacheError.html  enum.ChartError.html  enum.DatabaseError.html  enum.ErrorType.html  enum.FsErrorType.html  enum.JsonError.html  enum.MemoryError.html  enum.MemoryErrorType.html  index.html  sidebar-items.js  struct.ActionError.html  struct.ActionRunError.html  struct.ActionValidationError.html  struct.Error.html  struct.FsError.html  struct.MemoryError.html  type.JsonError.html
starchart/gateway/: index.html  sidebar-items.js  struct.DbRef.html  struct.Gateway.html
starchart/src/: atomics.rs  entry.rs  error.rs  lib.rs  metadata.rs  starchart.rs  util.rs
starchart/src/action/: dynamic.rs  error.rs  mod.rs
starchart/src/backend/: futures.rs  mod.rs
starchart/starchart/: struct.Starchart.html
test-suite/: Cargo.toml  build.rs
test-suite/tests/: action.rs  common.rs  dynamic.rs
(+436 files in other folders)
