[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
description = "A database tool that allows for multiple backend implementations"
documentation = "https://docs.rs/starchart"
edition = "2018"
homepage = "https://github.com/starlite-project/starchart"
license = "MIT"
name = "starchart"
readme = "README.md"
repository = "https://github.com/starlite-project/starchart"
version = "0.9.0"

[dependencies]
dashmap = "4.0"
parking_lot = "0.11.2"
thiserror = "1.0.30"

[dependencies.futures]
default-features = false
features = ["executor"]
version = "0.3"

[dependencies.futures-util]
default-features = false
features = ["std"]
version = "0.3"

[dependencies.serde_ron]
optional = true
package = "ron"
version = "0.7"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
optional = true
version = "1"

[dependencies.serde-value]
optional = true
version = "0.7"

[dependencies.serde_yaml]
optional = true
version = "0.8"

[dependencies.starchart-derive]
optional = true
path = "./starchart-derive"
version = "^0.9"

[dependencies.tokio]
default-features = false
features = ["fs"]
optional = true
version = "1"

[dependencies.tokio-stream]
default-features = false
features = ["fs"]
optional = true
version = "0.1"

[dependencies.serde_toml]
package = "toml"
version = "0.5"
optional = true

[dev-dependencies]
static_assertions = "1.0.0"

[dev-dependencies.tokio]
features = ["test-util", "macros"]
version = "1"

[[example]]
name = "basic"
required-features = ["cache", "derive"]

[[example]]
name = "get_all"
required-features = ["json", "derive"]

[features]
cache = ["serde-value"]
default = []
derive = ["starchart-derive"]
fs = ["tokio", "tokio-stream"]
json = ["serde_json", "fs"]
yaml = ["serde_yaml", "fs"]
ron = ["serde_ron", "fs"]
toml = ["serde_toml", "fs"]
metadata = []

[workspace]
members = [
  "./starchart-derive",
]

[package.metadata]
msrv = "1.46.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
