[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
description = "A database tool that allows for multiple backend implementations"
documentation = "https://docs.rs/starchart"
edition = "2018"
homepage = "https://github.com/starlite-project/starchart"
license = "MIT"
name = "starchart"
readme = "README.md"
repository = "https://github.com/starlite-project/starchart"
version = "0.15.1"

[dependencies]
parking_lot = "0.11.2"
send_wrapper = "0.5.0"

[dependencies.dashmap]
optional = true
version = "4.0"

[dependencies.futures-executor]
version = "0.3"

[dependencies.futures-util]
default-features = false
features = ["std"]
version = "0.3"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_bincode]
optional = true
package = "bincode"
version = "1.3"

[dependencies.serde_json]
optional = true
version = "1"

[dependencies.serde_toml]
optional = true
package = "toml"
version = "0.5"

[dependencies.serde-value]
optional = true
version = "0.7"

[dependencies.serde_yaml]
optional = true
version = "0.8"

[dependencies.starchart-derive]
optional = true
path = "./starchart-derive"
version = "^0.15"

[dependencies.tokio]
default-features = false
features = ["fs"]
optional = true
version = "1"

[dependencies.tokio-stream]
default-features = false
features = ["fs"]
optional = true
version = "0.1"

[dev-dependencies]
static_assertions = "1.0.0"
thiserror = "1.0.30"

[dev-dependencies.tokio]
features = ["test-util", "macros"]
version = "1"

[build-dependencies]
rustc_version = "0.4"

[[example]]
name = "basic"
required-features = ["memory", "derive"]

[[example]]
name = "get_all"
required-features = ["json", "derive"]

[features]
bincode = ["serde_bincode", "fs"]
default = []
derive = ["starchart-derive"]
fs = ["tokio", "tokio-stream"]
json = ["serde_json", "fs"]
memory = ["serde-value", "dashmap"]
metadata = []
pretty = []
toml = ["serde_toml", "fs"]
yaml = ["serde_yaml", "fs"]

[workspace]
members = [
  "./starchart-derive",
]

[package.metadata]
msrv = "1.46.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
