[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
description = "A database tool that allows for multiple backend implementations"
documentation = "https://docs.rs/starchart"
edition = "2018"
homepage = "https://github.com/starlite-project/starchart"
license = "MIT"
name = "starchart"
readme = "README.md"
repository = "https://github.com/starlite-project/starchart"
version = "0.18.2"

[dependencies]
futures-executor = "0.3"
parking_lot = "0.11.2"

[dependencies.futures-util]
default-features = false
features = ["std"]
version = "0.3"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.starchart-derive]
optional = true
path = "./starchart-derive"
version = "^0.18"

[dev-dependencies]
static_assertions = "1.0.0"
thiserror = "1.0.30"

[dev-dependencies.tokio]
features = ["test-util", "macros"]
version = "1"

[build-dependencies]
rustc_version = "0.4"

[features]
default = []
derive = ["starchart-derive"]
metadata = []

[workspace]
members = [
  "./starchart-backends",
  "./starchart-derive",
]

[package.metadata]
msrv = "1.46.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
