[package]
edition = "2018"
name = "starchart-backends"
version = "0.1.0"

[dependencies.dashmap]
optional = true
version = "5.1"

[dependencies.futures-util]
default-features = false
features = ["std"]
version = "0.3"
optional = true

[target.'cfg(unix)'.dependencies.libc]
optional = true
version = "0.2"

[dependencies.serde_bincode]
optional = true
package = "bincode"
version = "1.3"

[dependencies.serde_cbor]
optional = true
version = "0.11"

[dependencies.serde_json]
optional = true
version = "1"

[dependencies.serde_toml]
optional = true
package = "toml"
version = "0.5"

[dependencies.serde_yaml]
optional = true
version = "0.8"

[dependencies.serde-value]
optional = true
version = "0.7"

[dependencies.starchart]
path = "../"
version = "0.18"

[dependencies.tokio]
default-features = false
optional = true
features = ["fs"]
version = "1.0"

[target.'cfg(windows)'.dependencies.winapi]
optional = true
version = "0.3"

[dev-dependencies]
fxhash = "0.2"
static_assertions = "1.0"

[dev-dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.0"
features = ["sync", "parking_lot", "test-util", "macros"]

[build-dependencies]
autocfg = "1"
rustc_version = "0.4"

[features]
binary = ["serde_bincode", "serde_cbor", "fs"]
default = []
fs = ["tokio", "futures-util", "libc", "winapi"]
json = ["serde_json", "fs"]
memory = ["serde-value", "dashmap", "futures-util"]
toml = ["serde_toml", "fs"]
yaml = ["serde_yaml", "fs"]
