[package]
name = "starchart-derive"
version = "0.2.0"
edition = "2021"
description = "Derive macros used by the starchart crate"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["extra-traits"]