[package]
name = "starchart-derive"
version = "0.15.0"
edition = "2018"
description = "Derive macros used by the starchart crate"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
repository = "https://github.com/starlite-project/starchart"
homepage = "https://github.com/starlite-project/starchart"
documentation = "https://docs.rs/starchart-derive"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["extra-traits"]
