[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
description = "A database tool that allows for multiple backend implementations"
documentation = "https://docs.rs/starchart"
edition = "2018"
homepage = "https://github.com/starlite-project/starchart"
license = "MIT"
name = "starchart"
readme = "README.md"
repository = "https://github.com/starlite-project/starchart"
version = "0.19.0"

[dependencies]
futures-executor = "0.3"

[dependencies.futures-util]
default-features = false
features = ["std"]
version = "0.3"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde-value]
optional = true
version = "0.7"

[dependencies.starchart-derive]
optional = true
path = "../starchart-derive"
version = "^0.19"

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync", "parking_lot"]

[dev-dependencies]
static_assertions = "1.0.0"
thiserror = "1.0.30"

[dev-dependencies.tokio]
features = ["test-util", "macros"]
version = "1"

[build-dependencies]
autocfg = "1"
rustc_version = "0.4"

[features]
derive = ["starchart-derive"]
metadata = ["serde-value"]

[package.metadata.docs.rs]
all-features = true
