[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde = "1"

[dev-dependencies.starchart]
path = "../starchart"
features = ["derive", "metadata"]

[dev-dependencies.starchart-backends]
path = "../starchart-backends"
features = ["toml", "yaml", "json", "binary", "memory"]

[dev-dependencies.tokio]
version = "1.0"
features = ["sync", "parking_lot", "test-util", "macros"]
